# riff

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
docs/: design-system.md
docs/decisions/: 001-sqlite.md  002-tabs-over-midi.md  003-turn-principle.md  004-fluidsynth.md
docs/modes/: compose.md  free.md  learn.md
docs/product/: identity.md  overview.md  pedagogy.md
riff/: __init__.py  main.py
riff/ai/: engine.py  generate.py  magenta_gen.py  phrase.py  responder.py
riff/audio/: analyzer.py  capture.py  chords.py  midi_feeder.py  mix.py  song.py  synth.py
riff/core/: commands.py  state.py  welcome_model.py
riff/ui/: app.py  display.py  file_input.py  palette.py  waveform.py  welcome.py
riff/ui/screens/: main.py  welcome.py
riff/ui/widgets/: controls_bar.py  header.py  riff_panel.py  status_bar.py  waveform_display.py  you_panel.py
tests/: test_accumulation.py  test_audio_file_load.py  test_audio_mix.py  test_capture_toggle.py  test_chord_detection.py  test_chords.py  test_commands.py  test_compose_flow.py  test_display_modes.py  test_engine.py  test_file_flow.py  test_file_input.py  test_find_device.py  test_generate.py  test_input_mode.py  test_keyboard_input.py  test_markov.py  test_midi_feeder.py  test_modes.py  test_note_lookup.py  test_phrase.py  test_progression.py  test_save_and_play.py  test_song.py  test_song_player_cm.py  test_state_validation.py  test_textual_keybindings.py  test_textual_main.py  test_textual_welcome.py  test_timed_chords.py  test_welcome.py
