[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riff"
version = "0.1.0"
description = "Real-time Intelligent Frequency Follower — CLI jam companion"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
    "sounddevice>=0.4.6",
    "librosa>=0.10",
    "numpy>=1.24",
]

[project.scripts]
riff = "riff.main:main"

[tool.hatch.build.targets.wheel]
packages = ["riff"]
