[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riff"
version = "0.1.0"
description = "Real-time Intelligent Frequency Follower — CLI jam companion"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.86",
    "sounddevice>=0.4.6",
    "librosa>=0.10",
    "numpy<2",
    "pretty-midi>=0.2.11",
]

[project.scripts]
riff = "riff.main:main"

[tool.hatch.build.targets.wheel]
packages = ["riff"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]

[tool.ruff.lint.per-file-ignores]
"riff/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
